# django-render-block

./: .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  RELEASING.rst  manage.py  pyproject.toml  render_block.py  requirements.txt  setup.cfg  setup.py  template.py  tox.ini
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: main.yml
render_block/: __init__.py  base.py  django.py  exceptions.py  jinja2.py
tests/: settings.py  tests.py  urls.py  views.py
tests/templates/: include.html  test1.html  test2.html  test3.html  test3_jinja2.html  test4.html  test5.html  test6_django.html  test7_django.html  test8_django.html  test9_django.html  test_base.html  test_exception.html  test_issue#12_base.txt  test_issue#12_intermediate.html  test_issue#12_top.html  test_none_nodelist.html  test_request_context.html  test_sub.html
tests/templatetags/: test_tags.py  tests_tags.py
