[metadata]
name = django-render-block
version = 0.12a1
description = Render a particular block from a template to a string.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
author = Patrick Cloke
author_email = clokep@patrick.cloke.us
url = https://github.com/clokep/django-render-block
keywords = [django, template, block, templates, render, context]
license = ISC
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Web Environment
    Topic :: Internet
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: ISC License (ISCL)
project_urls =
    Documentation = https://github.com/clokep/django-render-block/blob/main/README.rst
    Release notes = https://github.com/clokep/django-render-block/blob/main/CHANGELOG.rst
    Source = https://github.com/clokep/django-render-block
    Tracker = https://github.com/clokep/django-render-block/issues

[options]
packages =
    render_block
install_requires = django>=4.2
python_requires = >=3.9

[options.package_data]
render_block = py.typed

[options.extras_require]
dev =
    Jinja2>=2.8
